--- a/FileTransfer/FileTransfer/bin/FileTransfer.dll.config
+++ b/FileTransfer/FileTransfer/bin/FileTransfer.dll.config
@@ -13,6 +13,11 @@
     <add name="FileDatabaseConnectionString2" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\FileDatabase.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+    <httpHandlers>
+      <add verb="*" path="AjaxFileUploadHandler.axd"
+        type="AjaxControlToolkit.AjaxFileUploadHandler,
+          AjaxControlToolkit"/>
+    </httpHandlers>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2">
       <assemblies>
