--- a/FileTransfer/FileTransfer/Web.config
+++ b/FileTransfer/FileTransfer/Web.config
@@ -13,11 +13,6 @@
     <add name="FileDatabaseConnectionString2" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\FileDatabase.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
-    <httpHandlers>
-      <add verb="*" path="AjaxFileUploadHandler.axd"
-        type="AjaxControlToolkit.AjaxFileUploadHandler,
-          AjaxControlToolkit"/>
-    </httpHandlers>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2">
       <assemblies>
@@ -25,7 +20,7 @@
         <add assembly="System.Web.Extensions.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
-    <httpRuntime targetFramework="4.5.2" />
+    <httpRuntime maxRequestLength="1048576" />
     <pages>
       <namespaces>
         <add namespace="System.Web.Optimization" />
@@ -75,6 +70,11 @@
     </httpModules>
   </system.web>
   <system.webServer>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="1048576000" />
+      </requestFiltering>
+    </security>
     <modules>
       <remove name="FormsAuthentication" />
       <remove name="ApplicationInsightsWebTracking" />
