--- a/FileTransfer/FileTransfer/FileTransfer.csproj
+++ b/FileTransfer/FileTransfer/FileTransfer.csproj
@@ -463,6 +463,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="images\" />
     <Folder Include="temp\" />
   </ItemGroup>
   <PropertyGroup>
